P1/static/css/portada.css
/*
    BODY CONTAINER --> HEADER, CONT-SIDE Y FOOTER
*/

.body-container{
    height: 100%;
    width: 100%;
    overflow-x: hidden;
    overflow-y: auto;
    /* background-image: url("../image/background.jpg"); */
}

/* 
HEADER --> LOGO, TÍTULO Y MENÚ DE NAVEGACIÓN
*/

header{
    background-color: white;
    width: 100%;
    height: 100px;
    position: sticky;
    top: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    opacity: 95%;
    -webkit-backdrop-filter: blur(30px);
    backdrop-filter: blur(30px);
    -webkit-box-shadow: 0px 5px 23px 20px white; 
    box-shadow: 0px 5px 23px 20px white;
}

.logo{
    height: 100%;
    margin: 0px 20px;
}

.logo img{
    height: 100%;
    width: auto;
}

.navbar{
    min-width: 335px;
    max-width: 335px;
}

.navbar a, .navbar-small a{
    color: black;
    height: 100%;
    font-size: 17px;
    text-decoration: none;
    margin: 0px 1.7vw;
    white-space: nowrap;
}

.navbar a:visited, .navbar-small a:visited{
    color: black;
}

.navbar a:hover, .navbar-small a:hover{
    color: var(--primary-color);
    transition-duration: 0.5s;
}

.navbar-small{
    display: none;
    visibility: none;
}

#navbar-left{
    display: flex;
    justify-content: right;
}

/*
    CONT-SIDE --> GRID Y PANEL LATERAL
*/

.gallery-asidebar{
    min-width: 100%;
    max-width: 100%;
    height: auto;
    display: flex;
    margin-top: 23px;
}

.gallery{
    min-width: 75%;
    max-width: 75%;
    display: flex;
    flex-wrap: wrap;
}

.product{
    float: left;
    width: 33%;
}

.product-img{
    padding: 10px;
    position: relative;
}

.product-img img{
    width: 100%;
    height: auto;
    display: block;
}

.product-img img:hover{
    border-radius: 10px;
    box-shadow: 10px 10px 5px #ccc;
    -moz-box-shadow: 0 0 10px #ccc;
    -webkit-box-shadow: 0 0 10px #ccc;
    box-shadow: 0 0 10px #ccc;
    background-color: rgb(218, 218, 218);
    transition-duration: 1s;
}

.product-img a{
    display: block;
    position: relative;
}

.overlay{
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    height: 100%;
    width: 100%;
    opacity: 0;
    border-radius: 10px;
    box-shadow: 10px 10px 5px #ccc;
    -moz-box-shadow: 0 0 10px #ccc;
    -webkit-box-shadow: 0 0 10px #ccc;
    box-shadow: 0 0 10px #ccc;
    background-color: rgb(218, 218, 218);
    transition-duration: 1s;
}

.product-img:hover .overlay{
    opacity: 1;
}

.text{
    color: black;
    font-size: 20px;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
}

.sneaker-name{
    display: flex;
    justify-content: center;
}

aside{
    min-width: calc(100vw * 0.25 - 23px);
    max-width: calc(100vw * 0.25 - 23px);
    min-height: calc(100vh - 175px);
    max-height: calc(100vh - 175px);
    position: fixed;
    right: 1.5vw;
    display: flex;
    align-items: center;
    justify-content: center;
    z-index: 0;
    overflow-x: hidden;
    overflow-y: scroll;
}

.aside-navbar{
    width: max-content;
    border-radius: 20px;
    border: 2px solid var(--primary-color);
    box-shadow: 10px 10px 5px var(--primary-color);
    -moz-box-shadow: 0 0 10px var(--primary-color);
    -webkit-box-shadow: 0 0 10px var(--primary-color);
    box-shadow: 0 0 10px var(--primary-color);
    padding: 20px;
    margin: 0px 20px;
    margin-top: 30px;
}

.aside-navbar div{
    width: fit-content;
    height: fit-content;
    padding: auto;
    display: flex;
}

.aside-navbar div a{
    color: black;
    width: fit-content;
    margin: auto 0px;
    padding: 10px;
    display: flex;
    text-decoration: none;
}

.aside-navbar div a:hover{
    border-radius: 10px;
    box-shadow: 10px 10px 5px var(--primary-color);
    -moz-box-shadow: 0 0 10px var(--primary-color);
    -webkit-box-shadow: 0 0 10px var(--primary-color);
    box-shadow: 0 0 10px var(--primary-color);
    transition-duration: 0.5s;
}

.aside-navbar div span{
    padding: 0px;
    margin: auto 10px;
}

.aside-navbar div a:visited{
    color: black;
}

.rrss-icon{
    height: 40px;
}

footer{
    color: white;
    background-color: var(--primary-color);
    width: 100%;
    height: 50px;
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
    -webkit-box-shadow: 0px 0px 5px 10px var(--primary-color); 
    box-shadow: 0px 0px 5px 10px var(--primary-color);
    position: relative;
    bottom: 0;
    display: flex;
    justify-content: center;
    z-index: 1;
    margin-top: 20px;
}

.copyright {
    margin: auto;
}

@media only screen and (max-width: 900px) {

    header{
        display: block;
    }

    .logo{
        display: flex;
        justify-content: center;
        height: 70%;
    }

    .logo a{
        display: flex;
        justify-content: center;
    }

    .navbar, #navbar-left{
        visibility: none;
        display: none;
    }

    .navbar-small{
        display: flex;
        justify-content: center;
        visibility: contents;
        min-width: 100%;
        max-width: 100%;
    }

    .product{
      width: 49.99999%;
      margin: 6px 0;
    }

    .aside-navbar{
        margin-right: 10px;
    }

    .aside-navbar div span{
        visibility: none;
        display: none;
    }

    aside{
        right: 2.5vw;
    }

    .aside-navbar div{
        display: flex;
        justify-content: center;
    }
}
  
@media only screen and (max-width: 500px) {

    .navbar-small{
        display: block;
    }

    .product{
        width: 100%;
    }

    aside{
        right: 2.5vw;
    }
}

